# generative_menu

./: .gitignore  CMakeLists.txt  MenuLCD1602.code-workspace  README.md
lcd1602/: CMakeLists.txt
lcd1602/src/: main.c  menu_data.c  rotenc_callback.c  rotenc_menu.c
lcd1602/src/include/: common.h  rotenc_callback.h
main/: CMakeLists.txt
main/src/: lcd1602_data.c  main.c  rotenc_callback.c
main/src/include/: lcd1602.h  lcd1602_data.h  rotary_encoder.h  rotenc_callback.h
menu/: CMakeLists.txt
menu/src/: lcd1602.c  main.c  menu_config.c  menu_context.c  menu_data_config.c  menu_data_context.c  menu_data_name.c  menu_data_tree.c  menu_data_value.c  menu_draw.c  menu_edit.c  menu_engine.c  menu_name.c  menu_navigate.c  menu_struct.c  menu_value.c  menu_values.c  rotary_encoder.c  rotenc_callback.c  rotenc_menu.c
menu/src/include/: menu_config.h  menu_context.h  menu_data_config.h  menu_data_context.h  menu_data_name.h  menu_data_tree.h  menu_data_value.h  menu_draw.h  menu_edit.h  menu_name.h  menu_navigate.h  menu_struct.h  menu_tree.h  menu_type.h  menu_value.h  menu_values.h  rotary_encoder.h  rotenc_callback.h  rotenc_menu.h
menu_data/: CMakeLists.txt
menu_data/src/: menu_data.c
menu_data/src/include/: menu_data.h
menu_work/: CMakeLists.txt
menu_work/src/: menu_config.c  menu_draw.c  menu_edit.c  menu_handle.c  menu_types.c  menu_value.c
menu_work/src/include/: menu_config.h  menu_types.h
work/: CMakeLists.txt
work/src/: menu_config.c  menu_context.c  menu_draw.c  menu_edit.c  menu_engine.c  menu_navigate.c  menu_tree.c  menu_values.c
work/src/include/: menu_common.h  menu_config.h  menu_context.h  menu_draw.h  menu_edit.h  menu_engine.h  menu_handle.h  menu_navigate.h  menu_tree.h  menu_types.h  menu_value.h  menu_values.h  rotary_encoder.h
work/src/old/: menu_navigate.c  menu_navigate.h
